setup node restful server; move modified interval-query lib to lib folder;

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dvr_scheduler",
   "version": "0.0.1",
   "dependencies": {
-    "interval-query": "~0.3.0"
+    "interval-query": "~0.3.0",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
