--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "dvr_scheduler",
   "version": "0.0.1",
   "dependencies": {
-    "interval-query": "~0.3.0",
-    "lodash": "^2.4.1"
+    "express": "3.x",
+    "lodash": "^2.4.1"    
   },
   "devDependencies": {
     "grunt": "~0.4.4",
@@ -17,7 +17,7 @@
     "mocha": "~1.18.2",
     "grunt-mocha-istanbul": "~1.4.1",
     "grunt-open": "~0.2.3",
-    "supertest": "~0.11.0",
+    "supertest": "~0.12.1",
     "grunt-execute": "~0.2.1"
   }
 }
