--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-resource": "~1.2.x",
     "bootstrap-css-only": "~3.1.1",
     "angular-bootstrap": "~0.10.0",
-    "components-font-awesome": "~4.0.3"
+    "components-font-awesome": "~4.0.3",
+    "angular-ui": "~0.4.0"
   }
 }
